Fix Back button spacing on ProjectDescription component

--- a/src/components/ProjectDescription.css
+++ b/src/components/ProjectDescription.css
@@ -16,7 +16,6 @@
     text-align: justify;
     display: inline-block;
     max-width: 800px;
-    margin-bottom: 30px;
 }
 
 .project-container .project-component-padding {
